--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ nav {
   color: white;
   font-size: 18px;
   border-radius: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .fa-arrow-right {
   margin-left: 5px;
@@ -153,7 +153,7 @@ nav {
 
 .card-item img {
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .title {
   text-align: center;
@@ -193,4 +193,39 @@ nav {
   margin-bottom: 6px;
   color: rgba(39, 23, 23, 0.589);
 }
+
+.seemore {
+  display: flex;
+  justify-content: end;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 15px;
+}
+
+.seemore a {
+  text-decoration: none;
+  color: rgb(245, 18, 158);
+  font-size: 18px;
+}
+
 /* ------------------popular cvollection part style End-------------*/
+/* ------------------Sign Up  part style Start-------------*/
+
+.sign-up {
+  background-image: linear-gradient(rgb(221, 141, 157), rgb(94, 166, 199));
+  padding-top: 20px;
+}
+
+.sign-up input {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 12px;
+  font-size: 18px;
+  color: darkgray;
+  margin-bottom: 15px;
+  border: 1px solid purple;
+  justify-content: center;
+}
+
+/* ------------------Sign Up  part style End-------------*/
